--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "22.1.0",
+    "typescript": "^5.5.4"
   }
 }
