--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@mui/x-date-pickers": "^7.12.0",
+    "@supabase/supabase-js": "^2.45.1",
     "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.3",
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "material-react-table": "^2.13.1",
     "next": "14.2.5",
