--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "book-rent",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -24,7 +25,6 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "zod": "^3.23.8"
   },
