--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "material-react-table": "^2.13.1",
     "next": "14.2.5",
